Fix spacing on all screen sizes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
 @use 'reset';
 @use 'fonts';
-@use 'base';
 
 $color-bg: #000;
 $color-font: #ccc;
@@ -28,6 +27,7 @@ h1, h2, h3, h4,
 blockquote,
 pre,
 footer,
+:not(li) > ul,
 .post p {
   margin-block-start: 2rem;
 }
@@ -63,6 +63,8 @@ time {
 }
 
 hr {
+  border: none;
+  border-bottom: 1px solid;
   border-color: lighten($color-bg, 20%);
 }
 
@@ -72,40 +74,29 @@ hr {
 }
 
 .brand {
-  margin: 0;
-
   a {
     text-decoration: none;
     color: $color-font;
-    // font-weight: bold;
   }
 }
 
 header,
-h1, h2, h3,
-p {
-  padding: 0 1rem;
-}
-ul {
-  padding-right: 1rem;
+h1, h2, h3, h4, h5,
+p, ul {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 @media screen and (min-width: $max-width) {
   header,
-  h1, h2, h3,
-  p {
-    padding: 0px;
-  }
-  ul {
-    padding-right: 0px;
+  h1, h2, h3, h4, h5,
+  p, ul {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .post {
-    .toc {
-      border-radius: 0.5rem;
-    }
-     
-    pre {
+    .toc, pre {
       border-radius: 0.5rem;
     }
   }
@@ -185,7 +176,6 @@ ul {
 
 .post-list {
   list-style: none;
-  margin: 0px;
   padding: 0px;
 }
 
@@ -200,4 +190,25 @@ ul {
 }
 .page-footer, .page-footer a {
   color: $color-muted;
+}
+
+h1 {
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+}
+h2 {
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+}
+h3 {
+  font-size: 1.2em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+}
+h4 {
+  font-size: 1.1em;
+  margin-block-start: 1.33em;
+  margin-block-end: 1.33em;
 }
